--- a/assets/css/reset_global.css
+++ b/assets/css/reset_global.css
@@ -10,7 +10,7 @@
     box-sizing: border-box;
     color: #FFF;
     vertical-align: baseline;
-    font-family: 'Barlow Condensed', sans-serif;
+    font-family: "Barlow Condensed", sans-serif;
     font-weight: normal;
 }
 
