--- a/assets/css/destination_style.css
+++ b/assets/css/destination_style.css
@@ -13,6 +13,7 @@ body {
 
 #destinationsNavBar ul .destinationItens li.active {
     border-bottom: 2px solid #FFF;
+    padding: 5px;
 }
 
 .destinationTexts {
