v-show tests & css components
Tech componenent created;
More tests with v-show

--- a/assets/css/crew_style.css
+++ b/assets/css/crew_style.css
@@ -1,9 +1,9 @@
 @import url(../css/reset_global.css);
 @import url(../css/universal_styles.css);
 
-body {
+/* body {
         background-image: url(../crew/background-crew-desktop.jpg);
-}
+} */
 
 #crewtab {
     margin-bottom: 0;
@@ -16,11 +16,6 @@ body {
 #crewMemberRole {
     font-size: 32px;
     color: gray;
-}
-
-#crewMemberName {
-    font-size: 56px;
-    width: 600px;
 }
 
 .crewTexts {
