--- a/assets/css/universal_styles.css
+++ b/assets/css/universal_styles.css
@@ -5,12 +5,12 @@
 }
 
 .u_contentContainer {
-  width: 70vw;
-  margin: auto;
-  margin-top: 2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 75vw;
+  margin: auto;
+  margin-top: 2rem;
 }
 
 .u_navBar ul {
@@ -44,13 +44,14 @@
 }
 
 .u_titles {
+  font-size: 56px;
   font-family: "Bellefair", serif;
   text-transform: uppercase;
   margin: 1rem 0;
+  width: 600px;
 }
 
 .u_description {
-
   color: var(--clearblue);
   font-family: "Barlow", sans-serif;
   font-size: 18px;
