main CSS finished!
Next steps:
- Responsive
- Animations

--- a/assets/css/components/header.css
+++ b/assets/css/components/header.css
@@ -44,6 +44,6 @@
     border-bottom: .2rem solid gray;
 }
 
-#pageHeader #pageMenu li:active {
+#pageHeader #pageMenu .activeBorder {
     border-bottom: .2rem solid #FFF;
 }
