--- a/assets/css/crew_style.css
+++ b/assets/css/crew_style.css
@@ -1,16 +1,14 @@
-@import url(../css/reset_global.css);
-@import url(../css/universal_styles.css);
+#crewTab .u_contentContainer {
+  align-items: flex-start;
+}
 
-/* body {
-        background-image: url(../crew/background-crew-desktop.jpg);
-} */
-
-#crewtab {
-    margin-bottom: 0;
+#crewTab, #crewTab article {
+    width: 100%;
+    height: 100%;
 }
 
 #crewIntroduction {
-    padding-bottom: 150px;
+    margin-bottom: 4em;
 }
 
 #crewMemberRole {
@@ -18,8 +16,12 @@
     color: gray;
 }
 
+#crewMemberName {
+    min-width: max-content;
+}
+
 .crewTexts {
-    margin: 2rem auto 4rem auto;
+    margin: 2rem auto 3rem auto;
 }
 
 #crewTab .u_mainInfo hr {
@@ -27,14 +29,6 @@
     height: 0;
     margin: 0;
 }
-
-/* 
-.u_mainInfo hr {
-    height: 1.5px;
-    width: 100%;
-    background-color: gray;
-    margin: 20px 0;
-} */
 
 #crewNavBar ul .crewItens {
     background-color: #979797;
@@ -53,4 +47,15 @@
     background-color: white;
 }
 
+/* 
+.u_mainInfo hr {
+    height: 1.5px;
+    width: 100%;
+    background-color: gray;
+    margin: 20px 0;
+} */
 
+#crewTab .u_images {
+  max-width: 100%;
+  max-height: 105%;
+}
