--- a/assets/css/destination_style.css
+++ b/assets/css/destination_style.css
@@ -1,33 +1,46 @@
-@import url(../css/reset_global.css);
-@import url(../css/universal_styles.css);
+#destinantionsTab {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+}
 
-/* body {
-    background-image: url(../destination/background-destination-desktop.jpg);
-    backdrop-filter: blur(1px);
-} */
+#destinationsIntroduction {
+    margin: 2rem auto;
+}
 
 #destinationsNavBar ul .destinationItens {
     color: var(--clearblue);
-    border-bottom: 2px solid transparent;
+    padding-bottom: 10px;
+    margin-right: 30px;
+    border-bottom: .2rem solid transparent;
 }
 
-#destinationsNavBar ul .destinationItens li.active {
-    border-bottom: 2px solid #FFF;
-    padding: 5px;
+.activeDest {
+    border-bottom: .2rem solid #FFF;
+    background-color: red;
 }
+
+#destinationsNavBar ul .destinationItens:hover {
+    border-bottom: .2rem solid gray;
+}
+
 
 .destinationTexts {
-    margin: 2rem auto 4rem auto;
+    margin: 2rem auto 3rem auto;
 }
 
 #destinationTitle {
     font-size: 100px;
 }
 
+#mainInfoDestinations {
+    max-width: 430px;
+}
+
 .u_mainInfo hr {
-    height: 1.5px;
+    height: 1.3px;
     width: 100%;
-    background-color: gray;
+    background-color: rgba(117, 117, 117, 0.221);
     margin: 20px 0;
 }
 
