--- a/assets/css/technologies_style.css
+++ b/assets/css/technologies_style.css
@@ -1,8 +1,26 @@
+#technologyContainer {
+  align-items: center;
+}
+
+#technologyTab {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#technologyContainer {
+    width: 100%;
+    height: 60vh;
+}
+
 #technologiesSubtitle {
     font-size: 16px;
     text-transform: uppercase;
     letter-spacing: 2.7px;
     color: var(--clearblue);
+}
+
+#technologiesNavBar {
+    margin: auto 5rem;
 }
 
 .technologyItens {
@@ -23,5 +41,6 @@
 
 .technologyItens:hover {
     background-color: white;
+    color: var(--marineblue);
     color: var();
 }
