--- a/assets/css/universal_styles.css
+++ b/assets/css/universal_styles.css
@@ -2,18 +2,20 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  width: 75vw;
   height: 75vh;
   margin: auto;
 }
 
 .u_mainContainer {
-    width: 75vw;
+  margin-top: 2em;
 }
 
 .u_contentContainer {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+  margin-top: 2em;
 }
 
 .u_navBar ul {
@@ -25,15 +27,11 @@
     font-size: 16px;
     text-transform: uppercase;
     letter-spacing: 2.7px;
-    margin-right: auto;
     cursor: pointer;
 }
 
-.u_mainInfo {
-  width: 450px;
-}
-
 .u_introduction {
+  margin-top: 2rem;
   letter-spacing: 4.75px;
   font-size: 28px;
   text-transform: uppercase;
@@ -59,4 +57,10 @@
   font-size: 18px;
   font-weight: regular;
   line-height: 1.8em;
+  width: 450px;
+}
+
+.u_images {
+  max-width: 100%;
+  max-height: 110%;
 }
