Update readme.md, numbersAnimation, responsive
- start responsive view to pages
- animation still under construction
- readme.md ready

--- a/assets/css/components/header.css
+++ b/assets/css/components/header.css
@@ -40,7 +40,7 @@
     font-weight: bold;
 }
 
-#pageHeader #pageMenu li:hover {
+#pageHeader #pageMenu li:not(.activeBorder):hover {
     border-bottom: .2rem solid gray;
 }
 
