--- a/assets/css/destination_style.css
+++ b/assets/css/destination_style.css
@@ -8,22 +8,20 @@
     margin: 2rem auto;
 }
 
-#destinationsNavBar ul .destinationItens {
+.destinationItens {
     color: var(--clearblue);
     padding-bottom: 10px;
     margin-right: 30px;
     border-bottom: .2rem solid transparent;
 }
 
-.activeDest {
-    border-bottom: .2rem solid #FFF;
-    background-color: red;
-}
-
-#destinationsNavBar ul .destinationItens:hover {
+.destinationItens:not(.active):hover {
     border-bottom: .2rem solid gray;
 }
 
+.active {
+    border-bottom: .2rem solid #FFF;
+}
 
 .destinationTexts {
     margin: 2rem auto 3rem auto;
@@ -61,7 +59,21 @@
 }
 
 #destinationInfos ul li p {
+    display: inline;
     font-family: "Bellefair", serif;
     font-size: 28px;
     text-transform: uppercase;
+}
+
+.numbers-grid {
+    display: grid;
+    grid-column: 2/6;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 30px;
+}
+
+@media (max-width: 700px) {
+.numbers-grid {
+    grid-column: 1;
+}
 }
