--- a/assets/css/universal_styles.css
+++ b/assets/css/universal_styles.css
@@ -64,3 +64,31 @@
   max-width: 100%;
   max-height: 110%;
 }
+
+@media screen and (max-width: 770px) {
+  #componentsContainer {
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+  .u_contentContainer {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
+
+  .u_titles {
+  width: max-content;
+}
+
+.u_description {
+  max-width: 450px;
+}
+
+.u_images {
+  max-height: 100%;
+}
+}
